# DistinguishNovel

./: .gitignore  CMakeLists.txt  README.md
novel/: init.txt  no_save.txt  novel_urllist.no.txt  novel_urllist.yes.txt  novel_urllist_sample.no.txt  novel_urllist_sample.yes.txt  test_all.txt  yes_save.txt
src/: config.h  main.cpp
src/checkhtml/: Novel.cpp  Novel.h
src/test/: Test.cpp  Test.h
